--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -9900,8 +9900,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #3c8dbc;
+  background-image: linear-gradient(180deg, #3c8dbc 10%, #264297 100%);
   background-size: cover;
 }
 
